gateway-api/routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-round-robin
  namespace: demo
spec:
  parentRefs:
    - name: cilium-gateway

  rules:
    # /api
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: backend
          port: 3000

    # /status
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: monitor
          port: 8000

    # /app
    - matches:
        - path:
            type: PathPrefix
            value: /app
      backendRefs:
        - name: frontend
          port: 80
